2000-06-08  Sven Neumann  <sven@gimp.org>

	* tips/gimp_tips.txt: somehow a few spaces sneaked in here
	at the wrong place

2000-06-08  Sven Neumann  <sven@gimp.org>

	* app/eraser.c: as suggested by Daniel Egger, set 
	TOOL_CAN_HANDLE_CHANGING_BRUSH for the eraser tool. 
	Fixes bug #13172.
	
2000-06-08  Sven Neumann  <sven@gimp.org>

	* app/qmask.c: call undo_push_qmask() before removing the
	channel since the callback will set the qmask_state 
	incorrectly otherwise. Fixes bug #13472.
	
	* app/undo.[ch]: code cleanup

	* plug-ins/common/gif.c: put save_comment into the values
	that are stored between calls to the GIF plug-in, so it 
	remembers if the user wants to save the comment. Fixes
	bug #12755.
	
Wed Jun  7 12:00:39 PDT 2000 Manish Singh <yosh@gimp.org>

	[patches from Daniel Egger]

	* app/layers_dialog.c: Disable the "Add Layermask" menuentry
	for indexed images.

	* app/gimpimage.c: Leave gimp_image_add_layer_mask(...) after
	spitting out messages when trying to add a layermask to an
	indexed image.

2000-06-07  Sven Neumann  <sven@gimp.org>

	* app/pixel_region.c: applied patch provided by Daniel Egger:
	store the result of tile_bpp() into a variable and use it
	instead of calling it over and over again in the inner loop.

	* app/pixel_region.h
	* app/pixel_regionP.h:
	Did some additional indentation and code cleanup.
	
2000-06-07  Michael Natterer  <mitch@gimp.org>
            Jay Cox  <jaycox@gimp.org>

	* plug-ins/common/gifload.c: test for GIMP_HAVE_PARASITES

	* plug-ins/common/url.c: open a pipe to the wget child and
	parse it's output so we can display a progressbar.

2000-06-07  Sven Neumann  <sven@gimp.org>

	* Makefile.am: sorry, there's no build directory

	* app/plug_in.c (plug_in_temp_run): uncommented the call to 
	plug_in_pop(). This seems to solve the longstanding problem 
	that made temporary procedures like Script-Fu fail when
	called from plug-ins.

2000-06-06  Seth Burgess <sjburges@gimp.org>
